@@ -2,5 +2,8 @@ blib
 pm_to_blib
 Makefile
 Makefile.old
+Number-Phone-CountryCode-*
+releases/
+.build/
 *.swp
 *.bak
