@@ -1,8 +1,0 @@
-Changes
-lib/Number/Phone/CountryCode.pm
-Makefile.PL
-MANIFEST
-MANIFEST.SKIP
-README
-t/basic.t
-t/codes.t
