@@ -1,0 +1,11 @@
+name = Number-Phone-CountryCode
+author = Michael Schout <mschout@cpan.org>
+license = Perl_5
+copyright_holder = Michael Schout <mschout@cpan.org>
+copyright_year = 2009
+
+[@MSCHOUT]
+use_twitter = 1
+use_travis = 1
+
+[Deprecated]
