@@ -1,6 +1,7 @@
 Revision history for Number::Phone::CountryCode.
 
-CURRENT
+{{$NEXT}}
+    - Mark this module as DEPRECATED in favor of Number::Phone::Country
     - Add support for: Cocos (Keeling) Islands (CC), Congo (CG),
       Cook Islands (CK), Cuba (CU), Dominica (DM), Spain (ES), Georgia (GE),
       Guinea (GN), Guam (GU), Guyana (GY), Iceland (IS), Montenegro (ME),
